--- a/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
+++ b/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
@@ -6,11 +6,19 @@
   justify-content: flex-end;
 
   div {
-    padding: 2rem;
+    padding: 1rem;
+    background-color: black;
+    border-radius: 15px;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   a {
     text-decoration: none;
     color: white;
+    flex: 1;
   }
 
   img {
