--- a/src/extensions/homepage/CustomOverrides.module.scss
+++ b/src/extensions/homepage/CustomOverrides.module.scss
@@ -15,6 +15,11 @@
   div[class*="mainRow"] {
     height: 116px !important;
   }
+
+  .o365cs-nav-o365Branding {
+    border-left: none !important;
+  }
+
   /* div[class*="belowSearchBox"] {
     display: none !important;
   } */
