--- a/src/extensions/homepage/MemberCustomOverrides.module.scss
+++ b/src/extensions/homepage/MemberCustomOverrides.module.scss
@@ -2,4 +2,8 @@
   div[name="Site Contents"] {
     display: none !important;
   }
+
+  div.ms-Nav-compositeLink[name="Edit"] {
+    display: none !important;
+  }
 }
