Hiding page title

--- a/src/extensions/homepage/CommonCustomOverrides.module.scss
+++ b/src/extensions/homepage/CommonCustomOverrides.module.scss
@@ -20,7 +20,8 @@
     border-left: none !important;
   }
 
-  /* div[class*="belowSearchBox"] {
+  div[class^="titleSubcell"],
+  div[class^="adjacentTitleSubcell"] {
     display: none !important;
-  } */
+  }
 }
