Attlasian links to inherit colors; enforced logotype

--- a/src/extensions/homepage/CommonCustomOverrides.module.scss
+++ b/src/extensions/homepage/CommonCustomOverrides.module.scss
@@ -20,16 +20,8 @@
     border-left: none !important;
   }
 
-  div[class^="titleSubcell"],
-  div[class^="adjacentTitleSubcell"] {
+  div[class^="titleAndNavWrapper"],
+  div[class^="logoCell"] {
     display: none !important;
-  }
-
-  div[class*="o365cs-flexPane-overlay"] {
-    background-color: #313131 !important;
-  }
-
-  div[class*="o365cs-flexPane-overlay"] * {
-    color: white !important;
   }
 }
