--- a/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
+++ b/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
@@ -14,16 +14,21 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
-  a {
-    text-decoration: none;
-    color: $ms-color-themePrimary;
-    flex: 1;
-  }
 
-  span {
-    height: 1.5rem;
-    font-size: 1.2rem;
-    font-weight: 700;
+    div {
+      width: 100px;
+
+      a {
+        text-decoration: none;
+        color: $ms-color-themePrimary;
+        flex: 1;
+
+        span {
+          height: 1.5rem;
+          font-size: 1.2rem;
+          font-weight: 700;
+        }
+      }
+    }
   }
 }
