Decreasing padding for internal divs

--- a/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
+++ b/src/extensions/homepage/HomepageApplicationCustomizer.module.scss
@@ -17,6 +17,8 @@
 
     div {
       width: 100px;
+      margin-left: 0rem !important;
+      margin-right: 0rem !important;
 
       a {
         text-decoration: none;
