--- a/src/extensions/homepage/CommonCustomOverrides.module.scss
+++ b/src/extensions/homepage/CommonCustomOverrides.module.scss
@@ -9,7 +9,8 @@
   }
 
   div[class*="mainRow"] {
-    height: 116px !important;
+    height: 108px !important;
+    padding-right: 0 !important;
   }
 
   .o365cs-nav-o365Branding {
